add test and lint on CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build-sphinx-docs
+name: continuous integration
 
 on:
   push:
@@ -9,7 +9,8 @@ on:
   workflow_dispatch:
 
 jobs: 
-  build: 
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -26,13 +27,27 @@ jobs:
         run: |
           sudo apt-get upgrade && apt-get update
           sudo apt-get install python3-sphinx
+          sudo apt-get install ghp-import
           python -m pip install --upgrade pip
           pip install sphinx_rtd_theme
           pip install imageio
+          pip install flake8 pytest pytest-cov
+
+      - name: Lint with flake8
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Test with pytest
+        run: |
+          cd tests/
+          pytest -vv --cov
+
       - name: Build HTML
         run: |
           cd docs/
           make html
+
       - name: Run ghp-import
         run: |
           ghp-import -n -p -f docs/_build/html
