--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           pip install sphinx_rtd_theme
           pip install imageio
           pip install flake8 pytest pytest-cov
+          pip install poetry
           poetry install
 
       - name: Lint with flake8
