--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,5 +58,5 @@ jobs:
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
-          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+          poetry config pypi-token.pypi $PYPI_TOKEN
           poetry publish --build
